Hide all overflow in news. Avoids weird scrollbars in FF.

--- a/app/assets/stylesheets/news.scss
+++ b/app/assets/stylesheets/news.scss
@@ -7,7 +7,7 @@ article {
   font-size: 20px;
   margin: 16px 0 32px 0;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 16px 0 0 0;
 }
 
